# demo-ddd

./: .env  Cargo.toml  Makefile  diesel.toml  rustfmt.toml
docker/: docker-compose.yml
migrations/2025-01-08-103011_create_user/: down.sql  up.sql
src/: main.rs
src/application/use_cases/: get_user.rs  register_user.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: user_service.rs
